# timesnap

./: README.md  pyproject.toml
tests/: test_cli.py
timesnap/: __init__.py  cli.py
